minor spacing correction

--- a/css-files/main.css
+++ b/css-files/main.css
@@ -112,7 +112,7 @@ a {
   color: #fbf1c7;
   float: left;
   display: block;
-  top: 10%;
+  top: 12%;
   left: 40%;
   font-size: 0.75rem;
 
